# WEB_dz_8

./: pyproject.toml
part_one/: authors.json  part_one.py
part_two/: models.py
part_two/Additional task/: consumer_email.py  consumer_sms.py  models.py  producer.py
